[package]
name = "lora-proxy"
version = "0.1.0"
edition = "2021"
authors = ["g.pillon"]
description = "Cross-platform multi-client UDP proxy"
homepage = "https://github.com/neosmart/udpproxy"
repository = "https://github.com/neosmart/udpproxy"
readme = "README.md"
keywords = ["proxy", "udp", "networking"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"

[dependencies]
getopts = "0.2"
rand = "0.3"
lazy_static = "1.4.0"
serde_json = "1.0.78"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.136"
lorawan-encoding = { git = "https://github.com/ivajloip/rust-lorawan"}
base64 = "0.13.0"
dotenv = { version="0.15.0",git="https://github.com/dotenv-rs/dotenv"}
rumqttc = "0.17.0"
hex = "0.4"
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
local-ip-address = "0.5.4"
sha256 = "1.4.0"

[build-dependencies]
tonic-build = "0.9"

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "linker-flavor=ld.lld"]
linker = "aarch64-linux-gcc"
[target.armv7-unknown-linux-gnueabihf]
rustflags = ["-C", "linker-flavor=ld.lld"]
linker = "aarch64-linux-gcc"
